# cleancode

./: CMakeLists.txt  LICENSE  README.md  cleancode.cc
